switch animation, og image, key z-index fix

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,7 +4,9 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  color: #221718;
 }
+
 .container {
   display: flex;
   position: relative;
@@ -16,6 +18,7 @@ body {
     size: 10vh;
     weight: 700;
   }
+  
   &.light-on {
     transition-delay: 2s;
     background-color: #ce979e;
