--- a/src/components/Center.module.scss
+++ b/src/components/Center.module.scss
@@ -1,4 +1,3 @@
-// TODO: 고기 클릭시 스크롤 생기는 현상
 .container {
   position: relative;
   flex-grow: 1;
@@ -15,12 +14,12 @@
   .shadow {
     transition: all 1s;
     position: absolute;
+    max-width: 80%;
+    max-height: 70%;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    max-width: 80%;
-    max-height: 70%;
     margin: auto;
   }
   .beef {
@@ -48,7 +47,7 @@
   .key {
     transition: opacity 0s 1s, transform 1s 0s;
     transform-origin: center;
-    z-index: 1;
+    z-index: 0;
     max-width: 20%;
     max-height: 10%;
     opacity: 0;
@@ -60,5 +59,7 @@
   .shadow {
     z-index: 0;
     top: 10%;
+    pointer-events: none;
   }
 }
+
